--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="terminal-heading">
-                        <span class="terminal-prompt">></span> aboutMe_
+                        <span class="terminal-prompt">>_</span> aboutMe_
                     </h2>
                 </div>
                 <div class="about-content">
@@ -53,7 +53,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="terminal-heading">
-                        <span class="terminal-prompt">></span> myProjects_
+                        <span class="terminal-prompt">>_</span> myProjects_
                     </h2>
                 </div>
                 <div class="projects-grid">
@@ -81,7 +81,7 @@
             <div class="container">
               <div class="section-header">
                 <h2 class="terminal-heading">
-                  <span class="terminal-prompt">></span> latestBlogs_
+                  <span class="terminal-prompt">>_</span> latestBlogs_
                 </h2>
               </div>
           
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="section-header">
                     <h2 class="terminal-heading">
-                        <span class="terminal-prompt">></span> connect_
+                        <span class="terminal-prompt">>_</span> connect_
                     </h2>
                 </div>
                 <div class="social-links">
