--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <title>All Projects</title>
     <link rel="stylesheet" href="styles.css"> <!-- Your existing CSS -->
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
