--- a/experience.html
+++ b/experience.html
@@ -6,6 +6,8 @@
     <title>All Projects</title>
     <link rel="stylesheet" href="styles.css"> <!-- Your existing CSS -->
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
