--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             class="fab fa-github"></i> GitHub</a>
                     <a href="https://www.linkedin.com/in/mdzaiduiux/" target="_blank" class="social-link"><i
                             class="fab fa-linkedin"></i> LinkedIn</a>
-                    <a href="#" class="social-link"><i class="fas fa-envelope"></i>mdzaiduiux@gmail.com</a>
+                    <a href="#" class="social-link"></i>mdzaiduiux@gmail.com</a>
                 </div>
             </div>
         </section>
