--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="projects-grid">
                     <div class="project-card">
                         <h3>
-                            <a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">
+                            <a href="https://colab.research.google.com/drive/1gQTMd8_zVb9ARVZGyzbnCwz5O8m5UZsL?usp=sharing" target="_blank" rel="noopener noreferrer">
                                 Air Quality and Pollution Assessment
                                 <span class="view-arrow">↗</span>
                             </a>
@@ -110,9 +110,9 @@
                         </p>
                     </div>
                     <div class="project-card">
-                        <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">TrendSnap -
-                                Podcast Viral Clip Extractor <span class="view-arrow">↗</span>
-                            </a></h3>
+                        <h3>TrendSnap -
+                                Podcast Viral Clip Extractor
+                            </h3>
                         <p>An intelligent script that identifies and extracts the most engaging 1-minute clips from
                             podcast videos using audio energy, sentiment analysis, and scene detection. Built with
                             MoviePy, OpenCV, Librosa, NLTK, and more, it computes a virality score for each clip and
@@ -120,9 +120,9 @@
                         </p>
                     </div>
                     <div class="project-card">
-                        <h3><a href="https://github.com/mzscripts/Next-PM" target="_blank" rel="noopener noreferrer">
+                        <h3><a href="https://github.com/mzscripts/Lok-Sabha-Election-Prediction" target="_blank" rel="noopener noreferrer">
 
-                                2029 Lok Sabha Election Prediction<span class="view-arrow">↗</span>
+                                2029 Lok Sabha Election Prediction <span class="view-arrow">↗</span>
                             </a></h3>
                         <p>Built a machine learning pipeline to predict popular vote % and seats won for major Indian
                             parties like BJP, INC, and AAP in the upcoming elections.
