--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
             </div>
             <div class="projects-grid">
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">MZTV <span
+                    <h3><a href="https://cinemixmz.vercel.app" target="_blank" rel="noopener noreferrer">MZTV <span
                                 class="view-arrow">↗</span>
                         </a> </h3>
                     <p>Its a free movie and TV streaming platform built with React, featuring user
@@ -28,7 +28,7 @@
                         viewing experience with a wide range of content accessible anytime, all through a
                         clean and responsive interface.</p>
                 </div>
-             
+
                 <div class="project-card">
                     <h3><a href="https://thehadithdaily.onrender.com/" target="_blank" rel="noopener noreferrer">The
                             Hadith Daily<span class="view-arrow">↗</span>
@@ -39,7 +39,7 @@
                         and meaningful way to stay connected with Islamic teachings.</p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">Trusty
+                    <h3><a href="https://trustytools.vercel.app/" target="_blank" rel="noopener noreferrer">Trusty
                             Tools <span class="view-arrow">↗</span>
                         </a> </h3>
                     <p>Its a web app that brings together multiple
@@ -50,9 +50,9 @@
                     </p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">CASE STUDY:
-                            Mother Dairy <span class="view-arrow">↗</span>
-                        </a></h3>
+                    <h3>CASE STUDY:
+                        Mother Dairy <span class="view-arrow"></span>
+                    </h3>
                     <p> Monitored employee compliance with working hours policies and analyzed customer
                         and order data to optimize productivity and sales. Created an Excel dashboard to track
                         compliance and business
@@ -60,7 +60,8 @@
                     </p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">
+                    <h3><a href="https://colab.research.google.com/drive/1_z_2ptaWrVRuwC3yd1_uVJWDXjcpHVzV?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
                             Diljit Dilluminati Tour – Ticket Sales Analysis <span class="view-arrow">↗</span>
                         </a></h3>
                     <p>Simulated and analyzed ticket sales for 11-city India tour using RFM segmentation, K-Means
@@ -70,9 +71,9 @@
                     </p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">Walmart
-                            Sales Performance Analysis <span class="view-arrow">↗</span>
-                        </a></h3>
+                    <h3>Walmart
+                        Sales Performance Analysis
+                    </h3>
                     <p>Analyzed Walmart sales data using Tableau to identify revenue drivers,
                         customer trends, and peak sales periods. Recommended focusing on high-margin products,
                         optimizing inventory,
@@ -80,9 +81,9 @@
                     </p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">
-                        Spotify
-                        Playlist Downloader  <span class="view-arrow">↗</span>
+                    <h3><a href="https://colab.research.google.com/drive/1y4JSw8x9mJeDW_1hBnk1vUka9qJ7K_tM?usp=sharing" target="_blank" rel="noopener noreferrer">
+                            Spotify
+                            Playlist Downloader <span class="view-arrow">↗</span>
                         </a></h3>
                     <p>A Python-based tool to download entire Spotify playlists as MP3s using spotDL and FFmpeg,
                         with live terminal progress and organized output.
