Show other Experience_

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="show-more-btn-container">
-                        <a href="projects.html" class="show-more-btn">Show More Projects_</a>
+                        <a href="projects.html" class="show-more-btn">moreProjects_</a>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,7 @@
                             experience. Worked collaboratively across teams to deliver scalable improvements.</p>
                     </div>
                     <div class="show-more-btn-container">
-                        <a href="experience.html" class="show-more-btn">Show other Experience_</a>
+                        <a href="experience.html" class="show-more-btn">otherExperiences_</a>
                     </div>
                 </div>
             </div>
