--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,25 @@
                         viewing experience with a wide range of content accessible anytime, all through a
                         clean and responsive interface.</p>
                 </div>
-
+                <div class="project-card">
+                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">NewsSync <span
+                                class="view-arrow">↗</span>
+                        </a> </h3>
+                    <p>A fully automated Flask web application that curates and syncs 100+ top headlines, images, and
+                        article links daily from The Times of India. Designed and deployed a cron-based scraping
+                        pipeline to refresh content every 24 hours, ensuring complete automation and eliminating manual
+                        data collection.</p>
+                </div>
+                <div class="project-card">
+                    <h3><a href="https://bhulabhatka.onrender.com/" target="_blank" rel="noopener noreferrer">Img Search 1984 <span
+                                class="view-arrow">↗</span>
+                        </a> </h3>
+                    <p>Its a Retro web app that lets users upload an image and find visually similar results
+                        from internet image Database.</p>
+                </div>
                 <div class="project-card">
                     <h3><a href="https://thehadithdaily.onrender.com/" target="_blank" rel="noopener noreferrer">The
-                            Hadith Daily<span class="view-arrow">↗</span>
+                            Hadith Daily <span class="view-arrow">↗</span>
                         </a> </h3>
                     <p>This is a newsletter that delivers a Hadith to subscribed users daily. The Hadiths are
                         sourced from an Islamic book converted into JSON format. A scheduler is
@@ -81,7 +96,8 @@
                     </p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://colab.research.google.com/drive/1y4JSw8x9mJeDW_1hBnk1vUka9qJ7K_tM?usp=sharing" target="_blank" rel="noopener noreferrer">
+                    <h3><a href="https://colab.research.google.com/drive/1y4JSw8x9mJeDW_1hBnk1vUka9qJ7K_tM?usp=sharing"
+                            target="_blank" rel="noopener noreferrer">
                             Spotify
                             Playlist Downloader <span class="view-arrow">↗</span>
                         </a></h3>
