--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                         clean and responsive interface.</p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://mznews.onrender.com/" target="_blank" rel="noopener noreferrer">NewsSync <span
+                    <h3><a href="https://mzscripts.github.io/Terminal/?app=1" target="_blank" rel="noopener noreferrer">NewsSync <span
                                 class="view-arrow">↗</span>
                         </a> </h3>
                     <p>A fully automated Flask web application that curates and syncs 100+ top headlines, images, and
@@ -38,14 +38,14 @@
                         data collection.</p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://bhulabhatka.onrender.com/" target="_blank" rel="noopener noreferrer">Img Search 1984 <span
+                    <h3><a href="https://mzscripts.github.io/Terminal/?app=3" target="_blank" rel="noopener noreferrer">Img Search 1984 <span
                                 class="view-arrow">↗</span>
                         </a> </h3>
                     <p>Its a Retro web app that lets users upload an image and find visually similar results
                         from internet image Database.</p>
                 </div>
                 <div class="project-card">
-                    <h3><a href="https://thehadithdaily.onrender.com/" target="_blank" rel="noopener noreferrer">The
+                    <h3><a href="https://mzscripts.github.io/Terminal/?app=2" target="_blank" rel="noopener noreferrer">The
                             Hadith Daily <span class="view-arrow">↗</span>
                         </a> </h3>
                     <p>This is a newsletter that delivers a Hadith to subscribed users daily. The Hadiths are
