--- a/experience.html
+++ b/experience.html
@@ -36,9 +36,19 @@
 
                 <div class="project-card">
                     <h3>Aircraft Technician Intern – Air India Limited</h3>
-                    <p>Delhi · Internship · January – March 2022<br>
+                    <p>New Delhi · Internship · January – March 2022<br>
                         Explored aircraft systems at the IGI Airport complex.</p>
                 </div>
+                <div class="project-card">
+                    <h3>
+                        Certification Training for Health Assistants – IP University Delhi Govt.</h3>
+                    <p>New Delhi· Internship · September 2021<br>
+                        Completed hands-on training covering basic medical terminology, CPR, oxygen administration, use of stethoscope and oximeter. Gained exposure to RML Hospital's operations, water recycling processes, and commonly used emergency drugs.                </div>
+                <div class="project-card">
+                    <h3>
+                        Product Assembly – Malik LED Works</h3>
+                    <p>East Delhi · Apprentice · Feburary - April 2021<br>
+                        Gained hands-on experience in assembling LED components, including integrating various parts to build LED TVs. This was my first practical industry experience, providing foundational skills in electronics and hardware assembly.                </div>
             </div>
         </div>
     </section>
